--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "history": "4.10.1",
     "prop-types": "15.7.2",
     "react": "16.14.0",
+    "react-credit-card": "^0.20.0",
     "react-dom": "16.14.0",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
