--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "history": "4.10.1",
     "prop-types": "15.7.2",
     "react": "16.14.0",
-    "react-credit-card": "^0.20.0",
     "react-dom": "16.14.0",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
+    "react-yandex-maps": "4.6.0",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-thunk": "2.3.0",
