--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-trial",
+  "name": "mediasoft-test",
   "version": "1.0.0",
-  "description": "testing react",
+  "description": "test",
   "private": true,
   "scripts": {
     "test": "npm run eslint",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DEADushka108/react-trial.git"
+    "url": "git+https://github.com/DEADushka108/MediaSoft-test.git"
   },
   "author": "Andrew Kuznetsov <cloxx108@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/DEADushka108/react-trial/issues"
+    "url": "https://github.com/DEADushka108/MediaSoft-test/issues"
   },
-  "homepage": "https://github.com/DEADushka108/react-trial#readme",
+  "homepage": "https://github.com/DEADushka108/MediaSoft-test#readme",
   "devDependencies": {
     "@babel/core": "7.8.7",
     "@babel/preset-env": "7.8.7",
@@ -28,6 +28,9 @@
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.3.2",
     "css-loader": "5.0.1",
+    "eslint": "5.16.0",
+    "eslint-config-htmlacademy": "0.6.0",
+    "eslint-plugin-react": "7.21.5",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.5.0",
     "mini-css-extract-plugin": "1.3.2",
