Prepare for testing

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "test",
   "private": true,
   "scripts": {
-    "test": "npm run eslint",
+    "test": "npm run eslint && npm run test.jest",
     "eslint": "eslint --ext .jsx --ext .js src/",
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "test.jest": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,13 +29,18 @@
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.3.2",
     "css-loader": "5.0.1",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
     "eslint": "5.16.0",
     "eslint-config-htmlacademy": "0.6.0",
     "eslint-plugin-react": "7.21.5",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.5.0",
+    "jest": "25.5.4",
     "mini-css-extract-plugin": "1.3.2",
     "node-sass": "5.0.0",
+    "react-test-renderer": "16.12.0",
+    "redux-mock-store": "1.5.4",
     "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
     "svg-sprite-loader": "5.1.1",
