--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "test",
   "private": true,
   "scripts": {
-    "test": "npm run eslint && npm run test.jest",
+    "test": "npm run stylelint && npm run eslint && npm run test.jest",
     "eslint": "eslint --ext .jsx --ext .js src/",
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development",
-    "start": "webpack-dev-server --open",
-    "test.jest": "jest"
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "dev": "cross-env NODE_ENV=development webpack --mode development",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+    "test.jest": "jest",
+    "stylelint": "stylelint \"src/styles/**/*.scss\" --syntax scss"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.3.2",
+    "cross-env": "7.0.3",
     "css-loader": "5.0.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
@@ -39,13 +41,17 @@
     "jest": "25.5.4",
     "mini-css-extract-plugin": "1.3.2",
     "node-sass": "5.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
     "react-test-renderer": "16.12.0",
     "redux-mock-store": "1.5.4",
     "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
+    "stylelint": "10.1.0",
+    "stylelint-config-htmlacademy": "0.1.4",
     "svg-sprite-loader": "5.1.1",
     "svgo": "1.3.2",
     "svgo-loader": "2.2.1",
+    "terser-webpack-plugin": "4.2.3",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.10.3"
